[package]
name = "main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whproxy"
path = "bin/whproxy.rs"

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.6.18", features = ["macros"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.4", features = [
  "cors",
  "add-extension",
  "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
