[package]
name = "nost"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
axum = { version = "0.7", features = ["macros", "tower-log", "http2"] }
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.28"
http = "1.1.0"
hyper = "1.3"
libsql = "0.6.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
retainer = "0.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["rustls_backend", "model"] }
thiserror = "1.0.60"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.11"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "add-extension", "trace", "catch-panic"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twitch_api = { version = "0.7.0", features = ["reqwest", "helix", "eventsub", "hmac"] }
twitch_oauth2 = { version = "0.15.1", features = ["reqwest", "client"] }
twitch_types = "0.4.8"
# twitch_api = { git = "https://github.com/twitch-rs/twitch_api/", features = ["reqwest", "helix", "eventsub",  "hmac"] }
# twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_api/", features = ["reqwest", "client"] }
# twitch_types = { git = "https://github.com/twitch-rs/twitch_api/" }
url = { version = "2.5.0", features = ["serde"] }

[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
[patch.crates-io.twitch_oauth2]
git = "https://github.com/twitch-rs/twitch_api"
