[package]
name = "tables"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
libsql = "0.6.0"
serde = { version = "1.0.201", features = ["derive"] }
tracing = "0.1.37"
twitch_types = "0.4.8"

[dev-dependencies]
rand = "0.8.5"
tracing-test = "0.2.5"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
